kubernetes/projects/apps/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 50m
            memory: 60Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
